--- a/Callcount/pom.xml
+++ b/Callcount/pom.xml
@@ -6,62 +6,15 @@
 
     <groupId>Callcount</groupId>
     <artifactId>Callcount</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>./lib/</classpathPrefix>
-                            <mainClass>callcount.Main</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.8.4</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.kieker-monitoring</groupId>
-            <artifactId>kieker</artifactId>
-            <classifier>aspectj</classifier>
-            <version>1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>net.kieker-monitoring</groupId>
-            <artifactId>kieker</artifactId>
-            <classifier>emf</classifier>
-            <version>1.6</version>
-        </dependency>
-    </dependencies>
+
+    <modules>
+        <module>callcount-gui-web</module>
+        <module>callcount-lib</module>
+    </modules>
+
 
 
 </project>
