--- a/Callcount/callcount-lib/pom.xml
+++ b/Callcount/callcount-lib/pom.xml
@@ -53,14 +53,12 @@
         </dependency>
         <dependency>
             <groupId>net.kieker-monitoring</groupId>
-            <artifactId>kieker</artifactId>
-            <classifier>aspectj</classifier>
+            <artifactId>kieker-aspectj</artifactId>
             <version>1.6</version>
         </dependency>
         <dependency>
             <groupId>net.kieker-monitoring</groupId>
-            <artifactId>kieker</artifactId>
-            <classifier>emf</classifier>
+            <artifactId>kieker-emf</artifactId>
             <version>1.6</version>
         </dependency>
     </dependencies>
